# atropos

./: .secrets.baseline  patch_sglang_server.py  pyproject.toml
atroposlib/api/: server.py
atroposlib/envs/: base.py  curriculum.py  reward_normalization.py  teacher_distillation_env.py
atroposlib/envs/server_handling/: managed_server.py  openai_server.py  server_harness.py  server_manager.py  sglang_server.py  vllm_server.py
atroposlib/tests/: test_api_perf.py  test_curriculum.py  test_numerical_verification.py  test_reward_normalization.py  test_teacher_distillation_env.py  verify_e2e.py  verify_hermes_compat.py
atroposlib/utils/: api_perf.py  numerical_verification.py
docs/: rl_infra_stabilization_sprint.md
environments/: gsm8k_server.py  gsm8k_server_teacher_distill.py  math_server_zero.py
example_trainer/: README.md  api.py  data.py  run_gsm8k_lora_matrix.sh  run_gsm8k_teacher_distill_single_terminal.sh  trainers.py  training.py  vllm_api_server.py
