[project]
name = "atroposlib"
version = "0.4.0"
description = "Atropos: An Environment and Rollout handler for LLM RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers",
    "datasets",
    "openai",
    "aiohttp",
    "tqdm",
    "fastapi",
    "uvicorn[standard]",
    "tenacity",
    "markdown",
    "numpy",
    "wandb",
    "gymnasium",
    "math-verify>=0.8.0",
    "jinja2",
    "nltk",
    "rich",
    "polars",
    "aiofiles",
    "jsonlines",
    "pydantic-cli",
    "hf_transfer",
    "antlr4-python3-runtime==4.9.3",
]

[project.scripts]
run-api = "atroposlib.cli.run_api:main"
inference-node-wandb-watcher = "atroposlib.cli.inference_node_wandb_watcher:main"
view-run = "atroposlib.cli.view_run:main"
view-run-multimodal = "atroposlib.cli.view_run_multimodal:main"
atropos-sft-gen = "atroposlib.cli.sft:main"
atropos-dpo-gen = "atroposlib.cli.dpo:main"
atropos-grpo = "example_trainer.grpo:main"
atropos-grpo-run = "example_trainer.run:main"

[project.optional-dependencies]
all = [
    "atroposlib[dev,examples,example_trainer]"
]
rewardfns = [
    "torch"
]
example_trainer = [
    "atroposlib[rewardfns, openai_endpoint]",
    "accelerate",
    "peft",
    "requests",
]
openai_endpoint = [
    "vllm",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "black",
    "flake8",
    "isort",
    "mypy",
    "rich",
]
examples = [
    "gradio",
    "atroposlib[rewardfns]",
    "langdetect"
]
verifiers = [
    "verifiers==0.1.9.post2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atroposlib", "example_trainer"]
